# models

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  mise.toml  plan.md
.claude/rules/: cli-style-guide.md  tui-agents-tab.md  tui-benchmarks-tab.md  tui-models-tab.md  tui-status-tab.md  tui-style-guide.md  website-design.md
.github/: FUNDING.yml
.github/workflows/: build-with-nix.yml  ci.yml  deploy-website.yml  release.yml  update-agents.md  update-benchmarks.yml
.stitch/designs/: hybrid-final-r1fonts.html  hybrid-r1-r2.html  hybrid-r1-skin-r2-layout.html  landing.html  r2-content-fixed.html  reimagine-1-editorial-brutalism.html  reimagine-2-data-dashboard.html
data/: agents.json  benchmarks.json
docs/: agents-tab-audit.md  benchmark-sources.md  benchmarks-tab-audit.md  cross-tab-controls-interaction-audit.md  custom-agents.md  models-tab-lane-audit.md  status-normalization-spec.md  status-provider-detail-review-guide.md  status-reconciliation-lane3-review.md  status-source-shape-audit.md  status-tab-focused-audit.md  status-tab-multi-pass-audit.md  status-tab-redesign-spec.md  ui-design-artifact-rewrite-plan.md  ui-design-guide.md  ui-tab-audit.md
docs/archive/: cross-tab-controls-interaction-audit.md  models-tab-lane-audit.md  status-overall-dashboard-plan.md  status-provider-detail-review-guide.md  status-tab-bold-acceptance-review.md  status-tab-bold-design-brief.md  status-tab-focused-audit.md  status-tab-multi-pass-audit.md  status-tab-redesign-spec.md  ui-design-artifact-rewrite-plan.md  ui-design-guide.md  ui-tab-audit.md
docs/plans/: 2026-01-26-agents-tab-design.md  2026-01-26-agents-tab-implementation.md  2026-01-26-agents-tab-phase2.md  2026-01-27-agents-tab-implementation.md  2026-01-27-agents-tab-redesign.md
public/: demo-script.md
src/: CLAUDE.md  api.rs  benchmark_cache.rs  benchmark_fetch.rs  benchmarks.rs  config.rs  data.rs  formatting.rs  main.rs  model_traits.rs  open_weights.rs  provider_category.rs  status.rs  status_fetch.rs
src/agents/: CLAUDE.md  cache.rs  changelog_parser.rs  data.rs  detect.rs  github.rs  health.rs  helpers.rs  loader.rs  mod.rs
src/benchmarks/: CLAUDE.md  fetch.rs  mod.rs  traits.rs
src/cli/: CLAUDE.md  agents.rs  agents_ui.rs  benchmarks.rs  link.rs  list.rs  mod.rs  models.rs  picker.rs  search.rs  show.rs  status.rs  styles.rs
src/status/: CLAUDE.md  assessment.rs  (+4 more)
website/: .prettierignore  CLAUDE.md  DESIGN.md  astro.config.ts  canvas.pen  mise.toml  package.json  tsconfig.json
(+92 files in other folders)
