[package]
name = "modelsdev"
version = "0.2.0"
edition = "2021"
description = "CLI/TUI tool for querying AI model information from models.dev"
license = "MIT"
repository = "https://github.com/arimxyer/models"
readme = "README.md"
keywords = ["cli", "tui", "ai", "models", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "models"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
anyhow = "1"

# Formatting
comfy-table = "7"

# Clipboard
arboard = "3"
