[package]
name = "modelsdev"
version = "0.8.7"
edition = "2021"
description = "CLI/TUI tool for browsing AI models and tracking coding agents"
license = "MIT"
repository = "https://github.com/arimxyer/models"
readme = "README.md"
keywords = ["cli", "tui", "ai", "models", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "models"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex
regex = "1"

# String similarity (Jaro-Winkler for T6 fuzzy matching)
strsim = "0.11"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
anyhow = "1"

# Formatting
comfy-table = "7"

# Clipboard
arboard = "3"

# Browser
open = "5"

# Version comparison
semver = "1"

# Cross-platform paths
dirs = "6"

# Config file parsing
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
